fixed Overlapping in Chrome bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  display: -webkit-flex;
+  display: -ms-flex;
   display: flex;
   flex-direction: column;
   align-items: center;
