--- a/src/styles/Designs.css
+++ b/src/styles/Designs.css
@@ -1,4 +1,6 @@
 .design-page-container {
+  display: -webkit-flex;
+  display: -ms-flex;
   display: flex;
   flex-direction: column;
 }
