--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,6 +1,9 @@
 .homepage-container {
+  display: -webkit-flex;
+  display: -ms-flex;
   display: flex;
   height: 90%;
+  min-height: 750px;
   flex-direction: column;
   align-items: center;
 }
@@ -8,6 +11,7 @@
 .personal-info {
   height: auto;
   max-width: 500px;
+  padding-top: 30px;
   text-align: center;
   position: relative;
   flex-grow: 1;
@@ -25,6 +29,8 @@
 }
 
 .avatar {
+  display: -webkit-flex;
+  display: -ms-flex;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -36,6 +42,8 @@
 }
 
 .social-icons {
+  display: -webkit-flex;
+  display: -ms-flex;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -46,10 +54,10 @@
 
 .icon-container {
   margin: 20px 20px 0 20px;
+  transition: all 0.2s ease-in-out;
 }
 
 .icon-container {
-  transition: all 0.2s ease-in-out;
 }
 
 .icon-container:hover {
@@ -114,7 +122,7 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 468px) {
   .personal-info,
   .social-icons {
     width: 90vw;
